--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/linux,maven,eclipse
+mumsched.properties
