--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ buildNumber.properties
 
 # End of https://www.gitignore.io/api/linux,maven,eclipse
 mumsched.properties
+springboot_log.log
+mumsched_log.log
